<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChicagoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_new_york_pizza_flavor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/pizza_flavor"
        android:layout_width="253dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Spinner
        android:id="@+id/size"
        android:layout_width="257dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_flavor" />

    <ListView
        android:id="@+id/selected_toppings"
        android:layout_width="372dp"
        android:layout_height="302dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeTop" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_to_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_toppings" />

    <TextView
        android:id="@+id/pizza_price"
        android:layout_width="96dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/order"
        app:layout_constraintTop_toBottomOf="@+id/selected_toppings" />

    <TextView
        android:id="@+id/crust_type"
        android:layout_width="113dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:minHeight="48dp"
        android:text="@string/crust"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/crust"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="59dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:text="@string/price"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/pizza_price"
        app:layout_constraintTop_toBottomOf="@+id/selected_toppings" />

    <Spinner
        android:id="@+id/select_toppings"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crust_type" />

    <Button
        android:id="@+id/addTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="51dp"
        android:text="@string/add_topping"
        app:layout_constraintStart_toEndOf="@+id/select_toppings"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <Button
        android:id="@+id/removeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove_topping"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/select_toppings"
        app:layout_constraintTop_toBottomOf="@+id/addTop" />

</androidx.constraintlayout.widget.ConstraintLayout>